@@ -6,6 +6,7 @@
 - Fix: [#15843] Tile Inspector can be resized too small.
 - Fix: [#15844] Tile Inspector has inconsistent text colours.
 - Fix: [#15878] Crash when opening a ride window for a corrupted vehicle.
+- Fix: [#15908] Crash when track elements have no ride assigned.
 
 0.3.5 (2021-11-06)
 ------------------------------------------------------------------------
